--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -43,7 +43,15 @@ h1 {
   border-color: none; }
 
 .dropdown-item:hover {
-  background-color: silver; }
+  background-color: rgba(187, 184, 184, 0.801); }
+
+.dropdown-menu {
+  background-color: black;
+  margin-top: 7px;
+  border-radius: 1%; }
+
+.dropdown-item {
+  color: white; }
 
 .btn {
   color: silver;
