--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -123,86 +123,106 @@ h1{
 	.remeraroja{
 border-radius: 15%;}
 }
+
 @media (max-width: 640px){
-	.imagen{display:none;}
-
-	.grilla{display: inline-block;}
-
-	.tabla{margin-left: 30%;}	
-
-	.cascada-gris{display: flex; size: 10px; padding: 1rem;}
-
-	.ubicaciones{display: block;}
-	.mapa1{display: none;}
-	.mapa2{display:none}
-
-	.nike1{
-        transform: translate(-130px ,-10px);
-    }
-    .nike2{
-        transform: translate(-495px ,450px);
-    }
-    .nike3{
-        transform: translate(-860px ,940px);
-    }
-    .nike4{
-        transform: translate(-130px ,1000px);
-    }
-    .nike5{
-        transform: translate(-495px ,1450px);
-    }
-    .nike6{
-        transform: translate(-860px ,1900px);
-    }
-
-
-    .cascada-gris{
-        margin-right: auto;
-        margin-left: auto;
-        transform: translateY(2000px);
-        height: 250px;
-        width: 100%;
-        margin-bottom: 0px;
-        
-
-        
-        font-family: sans-serif;
-        
-    } 
-    .name{ 
-        transform: translate(0px ,0px);
-    }
-                
-    .gmail{ 
-        transform: translate(-50px ,-50px);
-    }
-    .gmail .logo-mail{
-
-        transform: translate(0px ,-10px);
-    }
-
-    .telefono{ 
-        transform: translate(-240px ,10px);
-        
-    }
-    .telefono .logo-tel{
-        transform: translate(-10px ,0px);
-    }                 
-    .redes{ 
-        transform: translate(-400px ,50px);
-        
-    }
-    .insta{
-        transform: translate(-40px ,25px);
-        
-    }
-    .face{
-        transform: translate(-550px ,100px);
-        
-    }	
-    
+		.imagen{display:none;}
 	
-}
+		.grilla{display: inline-block;}
+	
+		.tabla{margin-left: 30%;}	
+	
+		.cascada-gris{padding: 1rem;}
+	
+		.ubicaciones{display: block;}
+		.mapa1{display: none;}
+		.mapa2{display:none}
+	
+		.nike1{
+			transform: translate(-108px ,-10px);
+		}
+		.nike2{
+			transform: translate(-470px ,450px);
+		}
+		.nike3{
+			transform: translate(-835px ,940px);
+		}
+		.nike4{
+			transform: translate(-108px ,1000px);
+		}
+		.nike5{
+			transform: translate(-470px ,1450px);
+		}
+		.nike6{
+			transform: translate(-835px ,1900px);
+		}
+	
+	
+		.cascada-gris{
+			margin-right: auto;
+			margin-left: auto;
+			transform: translateY(2000px);
+			height: 270px;
+			width: 100%;
+			background-color: black;
+			
+	
+			
+			font-family: sans-serif;
+			
+		} 
+	
+					
+		.gmail{ 
+			h5{display: none;}
+			transform: translate(-7px ,100px);
+			height: 20px;
+		}
+		#logomail{
+	
+			transform: translate(-30px ,20px);
+		}
+	
+		.telefono{ 
+			h5{display: none;}
+			transform: translate(-220px ,150px);
+			height: 20px;
+		}
+		#logocel{
+			transform: translate(-25px ,23px);
+		}  
+		.name{display: none;}      
+		
+		.redes{ 
+			h5{display: none;}
+			transform: translate(-380px ,50px);
+			height: 20px;
+		}
+		.insta{
+			h5{display: none;}
+			transform: translate(-40px ,25px);
+			
+		}
+		.face{
+			h5{display: none;}
+			transform: translate(-536px ,10px);
+			height: 20px;
+		}	
+		#logoface{
+			transform: translate(-35px ,25px);
+		}
+		
+		
+		
+	#encuesta{width: 300px; margin: top 4rem;}
+	.nombreform	{margin: 7px;}
+	.apellidoform{margin: 7px;}
+	.mailform{margin: 7px;}
+	#EMAIL{margin: 3px;}
+	.encontrarform{margin: 7px;}
+	.infoform{margin: 7px;}
+	.opinionform{margin: 7px;}
+    
+	}
 	
 .mover{
 	.remeraroja:hover{transform: scale(1.1);}
